just added the carousel

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,5 +1,7 @@
-@import "bootstrap";
-@import "bootstrap-responsive";
+// Fonts
 @import url(//fonts.googleapis.com/css?family=Racing+Sans+One);
+
+
+
 
 
