--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -1,7 +1,28 @@
 // Fonts
 @import url(//fonts.googleapis.com/css?family=Racing+Sans+One);
 
+// Footer
+#footer-links {
+  li {
+    padding: 5px 0;
+  }
+}
 
+footer {
+  color: #666;
+  background-color: #333;
+  min-height: 330px;
+  border-top: 4px solid black;
+}
 
+footer .footer_top {
+  border-bottom: 1px solid #222;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  height: 200px;
+}
 
-
+footer .footer_bottom {
+  border-top: 1px solid #444;
+  padding-top: 20px;
+}
