--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
     <header id="main">
       <a href="#" id="stroke"></a>
       <h1 class="page-header">
-        100 Fuckin Motels
-        <small>Save thyself, fag.</small>
+        100 Motels
+        <small>We organize live music.</small>
       </h1>
 
       <a href="#" id="logo"></a>
@@ -42,7 +42,7 @@
               <li><%= link_to "Users", users_path %></li>
               <li><a href="#">Link</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cart (<%= @cart.line_items.map(&:quantity).count %>) <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cart (<%= cart_items(@cart) %>) <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">View Contents</a></li>
                   <li><a href="#">Checkout</a></li>
@@ -95,12 +95,16 @@
     <%= yield %>
   </body>
   <footer>
-    <p>&copy; Seo Cahill 2012.</p>
-    <ul>
-      <li> <a href="#">Legal Stuff</a>  </li>
-      <li> <a href="#">Help</a>  </li>
-      <li> <a href="#">About</a>  </li>
-      <li> <a href="#">Contact</a>  </li>
-    </ul>
+    <div class="footer-top row">
+      <div class="span4">
+        <ul class="unstyled footer-links">
+          <li> <a href="#">Legal Stuff</a>  </li>
+          <li> <a href="#">Help</a>  </li>
+          <li> <a href="#">About</a>  </li>
+          <li> <a href="#">Contact</a>  </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer_bottom row">Seo Cahill 2012</div>
   </footer>
 </html>
