--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header id="main">
@@ -95,16 +96,18 @@
     <%= yield %>
   </body>
   <footer>
-    <div class="footer-top row">
-      <div class="span4">
-        <ul class="unstyled footer-links">
-          <li> <a href="#">Legal Stuff</a>  </li>
-          <li> <a href="#">Help</a>  </li>
-          <li> <a href="#">About</a>  </li>
-          <li> <a href="#">Contact</a>  </li>
-        </ul>
-      </div>
+    <div class="container">
+      <div class="footer-top row">
+          <div class="span4">
+            <ul class="unstyled footer-links">
+              <li> <a href="#">Legal Stuff</a>  </li>
+              <li> <a href="#">Help</a>  </li>
+              <li> <a href="#">About</a>  </li>
+              <li> <a href="#">Contact</a>  </li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer_bottom row">Seo Cahill 2012</div>
     </div>
-    <div class="footer_bottom row">Seo Cahill 2012</div>
   </footer>
 </html>
