--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,52 +1,43 @@
 <h1>Our Heroic Promoters</h1>
 
+<div class="container-fluid">
+
+	<div class="row-fluid">
+		<aside id="users-searchform" class="span4">
+			<header>
+				<h3>Search Controls</h3>
+			</header>
+			<form>
+				<div>
+					<label>By Rating</label>
+					<input  type='range' min='0' max='50' value='0' autofocus="autofocus"/> <br>
+					<label>By City</label>
+				  <input results="10" type='search' autofocus="autofocus"/> <br>
+				  <label>By Shows</label>
+				  <input type='text' placeholder='Search Artist' autofocus="autofocus"/> <br>
+				  <label>By Age</label>
+				  <input type='text' placeholder='Search Promoter' autofocus="autofocus"/>
+				</div>
+			</form>
+		</aside>
 
 
+		<section id="top-promoters" class="span8">
+				<header>
 
-<aside id="users-searchform">
-	<header>
-		<h3>Search Controls</h3>
-	</header>
-	<form>
-		<div>
-			<label>By Rating</label>
-			<input  type='range' min='0' max='50' value='0' autofocus="autofocus"/> <br>
-			<label>By City</label>
-		  <input results="10" type='search' autofocus="autofocus"/> <br>
-		  <label>By Shows</label>
-		  <input type='text' placeholder='Search Artist' autofocus="autofocus"/> <br>
-		  <label>By Age</label>
-		  <input type='text' placeholder='Search Promoter' autofocus="autofocus"/>
-		</div>
-	</form>
-</aside>
-
-
-<section id="top-promoters">
-		<header>
-			<h3>Best Promoters</h3>
-		</header>
-			<table summary="Listing of top rated promoters">
-				<thead>
-					<tr>
-						<th scope="col">Pic</th>
-						<th scope="col">name</th>
-						<th scope="col">rating</th>
-					</tr>
-				</thead>
-				<tbody>
-				<% @users.each do |user| %>
-					<tr>
-						<td class="placehold-image"><img src="http://placehold.it/45x45"></td>
-				  	<td class="email"><%= user.email %></td>
-				  <td>5/5</td>
-					</tr>
-					<tr>
-						<td colspan="3">
-							<%= link_to "Promoter Profile", user_path(user), class: "linky-hover" %>
-						</td>
-					</tr>
-					<% end %>
-				</tbody>
-			</table>
-		</section></div>
+				</header>
+					<ul class="thumbnails">
+						<% @users.each do |user| %>
+						<li class="span3">
+							<a class="thumbnail" href="#">
+								<img src="http://placehold.it/360x240" alt="">
+							</a>
+							<h3>Promoter Name</h3>
+							<p>Featuring a hero unit for a primary message and three supporting elements.</p>
+							<p><%= button_to "View Profile", user_path(user), method: :get, class: "btn button-primary" %></p>
+						</li>
+						<% end %>
+					</ul>
+		</section>
+	</div>
+</div>
