--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,35 +1,87 @@
-<header>
-	<h2>Promoter Profile Page</h2>
-</header>
-	
-<section id="promoter-headline">
-<header>
-	<h2>Info Box</h2>
-	<h3>Vanvcouver, Canada</h3>
-	<h1> rating chart goes here </h1>
-</header>
-<div>
-	<img src="http://placehold.it/100x100">
-	<p>Jimmy K</p>
+<div class="container">
+	<div class="row">
+		<section id="promoter-headline" class="section-box">
+			<div class="label-box">Promoter Info</div>
+			<header>
+				<h3>Vanvcouver, Canada</h3>
+				<h1> rating chart goes here </h1>
+			</header>
+			<div>
+				<img src="http://placehold.it/100x100">
+				<p>Jimmy K</p>
+			</div>
+			<button> <%= button_to "Contact" %> </button>
+		</section>
+	</div>
+
+	<div class="row">
+		<section id="promoter-stats" class="section-box">
+			<div class="label-box">Promoter Stats</div>
+			<h2>Stats</h2>
+			<ul>
+				<li>Followers: 22</li>
+				<li>Average Attendance: 109</li>
+				<li>Average Price: $11 </li>
+				<li>Successful shows: 12 </li>
+				<li>Satisfaction: 87% </li>
+			</ul>
+		</section>
+	</div>
+
+	<div class="row">
+		<section id="promoter-info" class="section-box">
+
+			<div class="tabbable tabs-below">
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="#1" data-toggle="tab">About Me</a></li>
+					<li><a href="#2" data-toggle="tab">My Crowd</a></li>
+					<li><a href="#3" data-toggle="tab">Venue info</a></li>
+					<li><a href="#4" data-toggle="tab">Transport</a></li>
+					<li><a href="#5" data-toggle="tab">Accomodation</a></li>
+				</ul>
+				<div class="tab-content">
+					<div class="tab-pane active" id="1">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+					<div class="tab-pane" id="2">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+					<div class="tab-pane" id="3">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+					<div class="tab-pane" id="4">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						</div>
+					<div class="tab-pane" id="5">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+							proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					</div>
+				</div>
+			</div>
+		</section>
+	</div>
 </div>
-<button> <%= button_to "Contact" %> </button>
-</section>
-
-<section id="promoter-stats">
-	<h2>Stats</h2>
-	<ul>
-		<li>Followers: 22</li>
-		<li>Average Attendance: 109</li>
-		<li>Average Price: $11 </li>
-		<li>Successful shows: 12 </li>
-		<li>Satisfaction: 87% </li>
-	</ul>
-</section>
-
-<section id="promoter-info">
-	<article>About me</article>
-	<article>MyCrowd</article>
-	<article>Venue info</article>
-	<article>Transport</article>
-	<article>Accomodation</article>
-</section>
