Promoter page looking presentable

--- a/app/assets/stylesheets/admin/users.css.scss
+++ b/app/assets/stylesheets/admin/users.css.scss
@@ -64,3 +64,16 @@ img  {
     top:2px;
     left:2px;
 }
+
+// promoter stats
+
+#promoter-stats dd, dt {
+  padding: 5px;
+}
+
+//promoter info
+
+#promoter-info p, img {
+  padding-left: 15px;
+  padding-right: 15px;
+}
