--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -58,3 +58,22 @@ footer .footer_bottom {
   border-top: 1px solid #444;
   padding-top: 20px;
 }
+
+// Image text wrapping
+.align_left {
+    float: left;
+    margin-right: 1em;
+    margin-bottom: 1em;
+}
+
+.align_right {
+    float: right;
+    margin-left: 1em;
+    margin-bottom: 1em;
+}
+
+.align_center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
