--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,7 +100,7 @@
       <div class="footer-top row">
           <div class="span4">
             <ul class="unstyled footer-links">
-              <li> <a href="#">Legal Stuff</a>  </li>
+              <li> <a href="#">Legal</a>  </li>
               <li> <a href="#">Help</a>  </li>
               <li> <a href="#">About</a>  </li>
               <li> <a href="#">Contact</a>  </li>
