cart looking respectable

--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -1,5 +1,4 @@
-<div class="container">
-<table summary="This is a tabel of the details of the order">
+<table class="table">
 	<thead>
 		<tr>
 			<th>name</th>
@@ -28,4 +27,3 @@
 		<% end %>
 	</tbody>
 </table>
-</div>
