--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,25 +1,24 @@
-<div class="cart_title"></div>
-
-<table summary="This is your shopping cart">
-	<thead>
-		<tr>
-			<th scope="col">Quantity</th>
-			<th scope="col">Item</th>
-			<th scope="col">Price</th>
-		</tr>
-	</thead>
-  <tfoot>
-  	<tr class="total_line">
-      <td colspan="2">Cart Total</td>
-      <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
-    </tr>
-  </tfoot>
-  <tbody>
-  	<%= render(cart.line_items) %>
-  </tbody>
-</table>
-<div>
-	<%= button_to "Checkout", new_order_path, method: :get %>
-	<%= button_to "Empty cart", cart, method: :delete, data: { confirm: 'Are you sure?' }
-     %>
-</div>
+ <table summary="This is your shopping cart" class="table table-bordered">
+  <caption><h3>Your Shopping Cart</h3></caption>
+  	<thead>
+  		<tr>
+  			<th scope="col">Quantity</th>
+  			<th scope="col">Item</th>
+  			<th scope="col">Price</th>
+  		</tr>
+  	</thead>
+    <tfoot>
+    	<tr class="total_line">
+        <th colspan="2">Cart Total</th>
+        <th class="total_cell"><%= number_to_currency(@cart.total_price) %></th>
+      </tr>
+    </tfoot>
+    <tbody>
+    	<%= render(@cart.line_items) %>
+    </tbody>
+  </table>
+  <div class="btn-group">
+  	<%= button_to "Checkout", new_order_path, method: :get, class: "btn" %>
+  	<%= button_to "Empty cart", cart, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn"
+       %>
+  </div>
