--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,15 +43,15 @@
               <li><%= link_to "Users", users_path %></li>
               <li><a href="#">Link</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cart (<%= cart_items(@cart) %>) <b class="caret"></b></a>
+                <a href="" class="dropdown-toggle" data-toggle="dropdown">Cart (<%= cart_items(@cart) %>) <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                  <li><a href="#">View Contents</a></li>
-                  <li><a href="#">Checkout</a></li>
-                  <li><a href="#">Empty</a></li>
+                  <li><%= link_to "View Cart", @cart %></li>
+                  <li><%= link_to "Checkout", new_order_path %></li>
+                  <li><%= link_to "Empty Cart", @cart, method: :delete %></li>
                   <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
+                  <li class="nav-header">About payments</li>
+                  <li><a href="#">Security</a></li>
+                  <li><a href="#">Terms and Conditions</a></li>
                 </ul>
               </li>
             </ul>
@@ -97,8 +97,8 @@
   </body>
   <footer>
     <div class="container">
-      <div class="footer-top row">
-          <div class="span4">
+      <div class="row">
+          <div class="footer-top span4">
             <ul class="unstyled footer-links">
               <li> <a href="#">Legal</a>  </li>
               <li> <a href="#">Help</a>  </li>
