fixed event show layout problem

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,14 +29,13 @@
 					</dl>
 				</div>
 				<div class="span3 offset1">
-					<div class=well well-small>
+					<div class="well well-small">
 						<h1>
 							<%= number_to_currency(@event.ticket_price) %>
 							<small>per ticket</small>
 						</h1>
 					</div>
 				</div>
-			</div>
 		</div>
 	</section>
 
