add to cart issure resolved

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -32,8 +32,7 @@
 						<h3><%= event.artist %></h3>
 						<p>Featuring a hero unit for a primary message and three supporting elements.</p>
 						<p>
-							<%= button_to "Show Details", event_path(event), method: :get, class: "btn btn-primary" %></a>
-							<%= button_to "Add to Cart", line_items_path(event_id: event), class: "button" %>
+							<%= button_to "Info and Tickets", event_path(event), method: :get, class: "btn btn-primary" %></a>
 						</p>
 					</li>
 					<% end %>
