--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,8 +37,7 @@
 										<%= event.venue %>
 										<%= event.date %>
 										<%= event.ticket_price %>
-										<%= link_to "Show Details", event_path(event) %>
-										<%= button_to "Add to Cart", line_items_path(event_id: event) %>
+										<%= link_to "Info & Tickets", event_path(event) %>
 									</p>
 								</li>
 								<% end %>
