--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -34,6 +34,7 @@
 							<%= number_to_currency(@event.ticket_price) %>
 							<small>per ticket</small>
 						</h1>
+						<%= render 'add_to_cart_form' %>
 					</div>
 				</div>
 		</div>
