event page looking reasonable

--- a/app/assets/stylesheets/admin/users.css.scss
+++ b/app/assets/stylesheets/admin/users.css.scss
@@ -4,8 +4,10 @@
 
 // image padding
 
-img  {
-  margin-bottom: 15px;
+#promoter-pic {
+  img  {
+        margin-bottom: 15px;
+  }
 }
 
 // star rating
