--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 	<section class="section-box">
 		<div class="row">
 			<div class="label-box">Promoter Info</div>
-			<div class="span2">
+			<div id="promoter-pic" class="span2">
 				<img src="//placehold.it/200" class="img-polaroid">
 				<%= link_to "Contact Jimmy", user_path(@user), class: "btn btn-primary btn-block" %>
 			</div>
