--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <!--if [lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif-->
-    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +47,7 @@
                 <ul class="dropdown-menu">
                   <li><%= link_to "View Cart", @cart %></li>
                   <li><%= link_to "Checkout", new_order_path %></li>
-                  <li><%= link_to "Empty Cart", @cart, method: :delete %></li>
+                  <li><%= link_to "Empty Cart", @cart, method: :delete, data: { confirm: 'Are you sure?' } %></li>
                   <li class="divider"></li>
                   <li class="nav-header">About payments</li>
                   <li><a href="#">Security</a></li>
